samples/_failures_safe/1761042923_ec2c1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c89b8a08.c: In function ‘main’:
./samples/SAFE/__tmp_c89b8a08.c:141:16: error: expected ‘)’ at end of input
  141 |     add_edge(&g
      |             ~  ^
      |                )
./samples/SAFE/__tmp_c89b8a08.c:141:5: error: too few arguments to function ‘add_edge’
  141 |     add_edge(&g
      |     ^~~~~~~~
./samples/SAFE/__tmp_c89b8a08.c:29:6: note: declared here
   29 | void add_edge(Graph *g, int from, int to, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_c89b8a08.c:141:5: error: expected declaration or statement at end of input
  141 |     add_edge(&g
      |     ^~~~~~~~
